# dcGO-2.0

./: .gitignore  CLAUDE.md  CODEBASE_CLEANUP.md  COMPLETION_SUMMARY.md  DATA_FLOW_CLARIFICATION.md  FUTER_WORK.md  FUTURE_WORK.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  LICENSE  ONTOLOGY_OPTIONS.md  PLAN.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SPRINT1_SUMMARY.md  SPRINT2_SUMMARY.md  SPRINT3_SUMMARY.md  SUMMARY.md  TEST_COVERAGE.md  THINKING.md  TODO.md  TRUE_PATH_RULE.md  extract_human_interpro.py  pyproject.toml  requirements.txt  run_analysis.sh  run_dcgo_human.py  test_domain_scanning.py
.github/workflows/: ci.yml
config/: __init__.py  settings.py
data/: README.md
examples/: __init__.py  basic_usage.py
results/: domain_go_associations_top100.tsv
scripts/: install.sh  run_dcgo_hpc.sh
src/: __init__.py  data_acquisition.py  database_manager.py  domain_annotation_parser.py  domain_scanning.py  goa_parser.py  hierarchical_inference.py  main_pipeline.py  ontology_processor.py  sparse_fisher.py  statistical_inference.py  vectorized_fisher.py
src/dcgo_pipeline/: __init__.py
src/dcgo_pipeline/core/: __init__.py
src/dcgo_pipeline/integration/: __init__.py
src/dcgo_pipeline/utils/: __init__.py
src/dcgo_pipeline/validation/: __init__.py
src/dcgo_pipeline/visualization/: __init__.py
tests/: __init__.py  test_config.py
tests/e2e/: __init__.py  test_pipeline_integration.py
tests/integration/: __init__.py  test_true_path_pipeline.py
tests/unit/: __init__.py  test_data_acquisition.py  test_domain_annotation_parser.py  test_goa_parser.py  test_hierarchical_inference.py  test_main_pipeline.py  test_ontology_processor.py  test_sparse_fisher.py  test_statistical_inference.py  test_vectorized_fisher.py
validation/: architecture_contribution.tsv  novel_predictions_top100.tsv  performance_metrics.tsv  sprint1_validation.py  validate_results.py  validation_log.txt
